--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <p>We set up a computer with other peripherals, configuring the network and maintenance of the computers !</p>
           </div>
           <div class="project-img">
-            <img src="file:///C:/Users/Troy/Documents/DXC/proj1.jpg" alt="img">
+            <img src="images/proj1.jpg" alt="img">
           </div>
         </div>
       </div>
