--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
         </div>
       </div>
       <div class="col-right">
-        <h1 class="section-title">Chat<span>us</span></h1>
+        <h1 class="section-title">About<span>us</span></h1>
         <h2>DXC SMART TECH SOLUTION</h2>
         <p> We specialize in delivering cutting-edge technology services including custom PC builds, 
           comprehensive computer repair and maintenance, network setup, and cybersecurity solutions. Our expert team is dedicated to ensuring 
           your tech infrastructure is always optimized and secure. 
           Trust DXC Smart Tech Solutions for all your technology needs and experience the best in service</p>
-        <a href="https://www.facebook.com/profile.php?id=61569833377203" class="cta"></a>
+        <a href="https://www.facebook.com/profile.php?id=61569833377203" class="cta">Chat us now!</a>
       </div>
     </div>
   </section>
