--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
         </div>
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png" /></a>
+          <a href="#"><img src="https://freepngimg.com/thumb/twitter/2-2-twitter-png-file-thumb.png" /></a>
         </div>
         <div class="social-item">
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png" /></a>
